# volto-blocks-converter

./: .gitignore  Dockerfile  Makefile  PROJECT.md  README.md  develop.sh  docker-entrypoint.sh  pyproject.toml  requirements.txt
app/: README.txt  blocks.py  blocks2html.py  config.py  html2blocks.py  html2content.py  html2slate.py  main.py  slate2html.py  tests.py  utils.py
tests/: payload-t1.html  payload-t1.json  test_blocks2html.py  test_callout.py  test_grid.py  test_hero.py  test_html2content_blocks.py  test_payload.py  test_statistics.py  test_teaser.py
tests/data/: statistic_block.json
tests/fixtures/: callout-page.json  grid_block.json  statistic_block.html  teaser.html  teaser.json
